--- a/styles/style.css
+++ b/styles/style.css
@@ -1,2 +1,24 @@
 body {
-background-color: salmon;
+background-color:rgb(238, 177, 170);
+}
+
+#banner {
+  background-color:salmon;
+  padding-top: 80px;
+  padding-bottom: 80px;
+  text-align:center;
+  margin-bottom: 40px;
+}
+
+
+
+
+
+
+
+
+
+td {
+  border:solid 1px;
+  padding: 4px;
+}
