--- a/styles/style.css
+++ b/styles/style.css
@@ -3,21 +3,40 @@ background-color:rgb(104, 170, 104);
 font-family: 'Englebert', sans-serif;
 background-blend-mode: hue;
 }
-
+.bar {
+  font-size: 20px;
+}
 main {
   margin: 0 auto;
 }
+
+main > ul > :nth-child(2) {
+  margin-top: 20px;
+  margin-right: 30px;
+  float:left;
+}
+
 h2 {
   text-align: center;
 }
+
+.location {
+  text-align: center;
+  font-size: 25px;
+  font-family: Comic Sans MS, Calibri;
+  padding-bottom: 50px;
+}
+
 #headerPageOne  {
   text-align: center;
   font-size: 25px;
   font-family: Comic Sans MS, Calibri;
 }
+
 #pageOneNav {
   float: right;
 }
+
 .aboutcookies {
   margin: 0 auto;
   text-align:center;
@@ -25,6 +44,7 @@ h2 {
   font-size: 18px;
   margin:0 auto;
 }
+
 #bannerOne {
   background-color:salmon;
   padding-top: 40px;px;
@@ -37,8 +57,8 @@ h2 {
 #bannerTwo {
   background-color:salmon;
   background-blend-mode:
-  padding-top: 80px;
-  padding-bottom: 80px;
+  padding-top: 40px;
+  padding-bottom: 40px;
   text-align:center;
   margin-bottom: 40px;
 }
@@ -51,7 +71,6 @@ h2 {
 #mainTable {
   margin: 0 auto;
   font-family:'Times New Roman', Times, serif;
-
 }
 
 img {
@@ -64,6 +83,24 @@ img {
   margin-right: auto;
   display: block;
   padding-bottom: 25px;
+  border-radius: 5px;
+
+}
+
+#fishCookie {
+  margin-left: auto;
+  margin-right: auto;
+  display: inline;
+  padding-bottom: 25px;
+  border-radius: 5px;
+}
+
+#cookieCutter {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  padding-bottom: 25px;
+  border-radius: 5px;
 }
 
 td {
@@ -76,4 +113,8 @@ footer {
   
   background-color: salmon;
   overflow:hidden;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  color:rgb(116, 83, 60);
+  font-size: 20px;
 }
