--- a/styles/style.css
+++ b/styles/style.css
@@ -31,6 +31,8 @@ h2 {
   text-align: center;
   font-size: 25px;
   font-family: Comic Sans MS, Calibri;
+  margin: 0 auto;
+  padding-left: 30px;
 }
 
 #pageOneNav {
@@ -43,14 +45,13 @@ h2 {
   text-align:center;
   font-weight: bold;
   font-size: 18px;
-  float: left;
   padding-top: 30px;
-  padding-left: 50px;
+  padding-left: 70px;
 }
 
 #bannerOne {
   background-color:salmon;
-  padding-top: 40px;px;
+  padding-top: 40px;
   padding-bottom: 20px;
   margin-bottom: 40px;
   text-align:center;
@@ -85,7 +86,8 @@ img {
 #photos {
   display: inline-block;
   float:center;
-  padding-left: 90px;
+  padding-left: 70px;
+  
 }
 
 
@@ -96,7 +98,6 @@ td {
 }
 
 footer {
-  
   background-color: salmon;
   overflow:hidden;
   padding-top: 50px;
@@ -104,4 +105,14 @@ footer {
   color:black;
   font-size: 20px;
   font-style:bold;
+}
+#locations {
+  font-size: 32px;
+  margin: 0 auto;
+  float:center;
+  
+}
+
+#threefish {
+  filter: 20p
 }
