--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 body {
-background-color:rgb(104, 170, 104);
+background-color:rgba(121, 187, 121, 0.733);
 font-family: 'Englebert', sans-serif;
 background-blend-mode: hue;
 }
@@ -25,12 +25,14 @@ h2 {
 }
 
 #headerPageOne  {
-  text-align: center;
-  font-size: 25px;
+  text-align: left;
+  font-size: 18px;
   font-family: Comic Sans MS, Calibri;
   margin: 0 auto;
   padding-left: 40px;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  margin-left: 30px;
+  padding-top: 50px;
 }
 
 #pageOneNav {
@@ -39,27 +41,31 @@ h2 {
 
 .aboutcookies {
   margin: 0 auto;
-  text-align:center;
+  text-align:left;
   font-weight: bold;
-  font-size: 18px;
+  font-size: 14px;
   padding-top: 30px;
   padding-left: 70px;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  padding-bottom: 40px;
 }
 
 #bannerOne {
-  background-color:salmon;
+  background-color:rgba(250, 128, 114, 0.719); 
   padding-top: 40px;
   padding-bottom: 20px;
   margin-bottom: 40px;
   text-align:center;
-
+  border: solid 8px  rgb(78, 173, 78);
+  border-radius: 100%;
 }
 
 #bannerTwo {
-  background-color:salmon;
+  background-color: rgba(250, 128, 114, 0.719); 
   text-align:center;
   margin-bottom: 50px;
+  border: solid 8px rgb(78, 173, 78);
+  border-radius: 100%;
 }
 
 #bannerText {
@@ -71,24 +77,28 @@ h2 {
   margin: 0 auto;
   font-family:'Times New Roman', Times, serif;
   font-style:bold;
-  padding-bottom: 60px;
+  padding-bottom: 50px;
+  border: solid 3px black;
 }
-
-img {
-  height: 250px;
-
+#mainTable td {
+  padding: 4px 8px;
+  border:solid 1px;
+}
+#mainTable th {
+  padding: 4px;
+  font-weight: bold;
 }
 #photos {
-  display: inline-block;
+  display: inline-table;
   margin: 0 auto;
-  max-width:90%;
-  
+  width:100%;
+  height: 250px;
+  border: hidden;
 }
-
-td {
-  border:solid 1px;
-  padding: 4px;
-
+#photos td {
+  width: 25%;
+  background-size: cover;
+  background-position: center;
 }
 
 #addStore {
@@ -100,7 +110,9 @@ td {
 }
 
 #newStore {
-  font-size: 25px;
+  font-size: 20px;
+  color: black;
+  text-decoration: underline;  
 }
 
 #submit {
@@ -109,26 +121,38 @@ td {
 }
 
 footer {
-  background-color: salmon;
-  overflow:hidden;
-  padding-top: 50px;
+  background-color: rgba(250, 128, 114, 0.719); 
+  padding-top: 10px;
   padding-bottom: 10px;
   color:black;
   font-size: 25px;
   font-style:bold;
+  border: solid 8px rgb(78, 173, 78);
+  margin-top: 40px;
 }
 #locations {
-  font-size: 20px;
-  margin: 0 auto;
+  font-size: 15px;
+  margin: 4px auto;
   float:center;
   color: rgb(27, 88, 27);
   
 }
 #addresses {
-  float:center;
-  margin: 0 auto;
+  margin: 4px auto;
   font-size: 15px;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  float: center;
+  text-align: center;
+  border:hidden;
+  table-layout: inherit;
+}
+
+#contactInfo {
+  padding-bottom: 20px;
+  font-size: 15px;
+  margin: 4px auto;
+  border: hidden;
+  float: center;
 }
 
 #threeFish {
